[package]
name = "rackhost_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
refined_type = "0.5.9"
reqwest = { version = "0.12.8", features = ["cookies"] }
scraper = "0.20.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
