[package]
name = "rackhost_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
nutype = "0.5.0"
reqwest = { version = "0.12.8", features = ["cookies"] }
scraper = "0.20.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["macros"] }
once_cell = "1.20.2"
serde_json = "1.0.131"
sealed = "0.6.0"
reqwest-middleware = "0.3.3"
reqwest-ratelimit = "0.2.0"
async-trait = "0.1.83"
dotenv = "0.15.0"
